--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       color: #ffffff;
       font-weight: 600;
     }
+
     /* Section Styling */
     .section-dark {
       background-color: #1e1e1e;
@@ -621,6 +622,7 @@
           <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
           <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
           <li class="nav-item"><a class="nav-link" href="#resume">Experience</a></li>
+          <li class="nav-item"><a class="nav-link" href="#certifications">Certifications</a></li>
           <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -726,8 +728,47 @@
     </div>
   </section>
 
+  <section id="resume" class="resume-section section-darker">
+    <div class="container">
+      <h2 class="text-center">Experience</h2>
+      <div class="row">
+        <div class="col-md-8 offset-md-2">
+          <div class="resume-item animated-card">
+            <h4>Associate Software Enginner</h4>
+            <h5>2024 - Present</h5>
+            <p><em>Tata Consultancy Services, Bangalore, India</em></p>
+            <ul>
+              <li>Worked on Bancs banking domain projects, validating and managing parameter data for accounts,
+                instruments, P&L codes,
+                trial balances, and currencies.</li>
+  
+              <li> large Excel parameter sheets, identifying missing values and resolving data inconsistencies to ensure
+                high
+                data quality.</li>
+  
+              <li> Power BI dashboards to automate data validation and monitoring, significantly reducing manual
+                verification
+                time.</li>
+  
+              <li>Contributed to internal automation initiatives that streamlined monthly parameter validation and
+                reporting processes.</li>
+  
+              <li>Executed SQL queries for data validation and migration, collaborating with business and technical teams
+                to ensure data
+                accuracy.</li>
+  
+            </ul>
+          </div>
+  
+        </div>
+      </div>
+      <div class="text-center mb-5">
+        <a href="path/to/your/resume.pdf" class="btn btn-primary btn-lg" download>Download CV</a>
+      </div>
+    </div>
+  </section>
 
-  <section id="projects" class="projects-section section-darker">
+  <section id="projects" class="projects-section section-dark">
     <div class="container">
       <h2 class="text-center">Projects</h2>
       <div class="row d-flex">
@@ -818,21 +859,19 @@
   </section>
 
 
-  <section id="services" class="services-section section-dark">
+  <section id="services" class="services-section section-darker">
     <div class="container">
       <h2 class="text-center">Services</h2>
-      <p class="text-center lead mb-5">I help businesses unlock the power of their data by transforming complex
-        information into strategic assets.</p>
+      <p class="text-center lead mb-5">As a Data Analyst, I help businesses turn raw data into actionable insights through analysis, visualization, and
+      automation.</p>
       <div class="row">
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card animated-card h-100">
             <img src="images/services/1.png" class="card-img-top" alt="Business Intelligence & Dashboard Development">
             <div class="card-body d-flex flex-column text-center">
-              <h5 class="card-title">Business Intelligence & Dashboard Development</h5>
-              <p class="card-text mt-2">I design and build intuitive, interactive dashboards in Power BI and Tableau.
-                Transform your raw data into actionable insights, track KPIs in real-time, and empower your team to make
-                data-driven decisions confidently.</p>
+              <h5 class="card-title">Data Cleaning & Preparation</h5>
+              <p class="card-text mt-2">Organizing and transforming raw data into accurate, structured formats for analysis.</p>
             </div>
           </div>
         </div>
@@ -841,10 +880,8 @@
           <div class="card animated-card h-100">
             <img src="images/services/2.png" class="card-img-top" alt="Advanced Data Analysis & Insights">
             <div class="card-body d-flex flex-column text-center">
-              <h5 class="card-title">Advanced Data Analysis & Insights</h5>
-              <p class="card-text mt-2">Go beyond surface-level metrics. I perform deep-dive statistical analysis,
-                customer segmentation, and A/B testing to uncover hidden patterns and opportunities that drive growth,
-                optimize marketing ROI, and improve operational efficiency.</p>
+              <h5 class="card-title">Dashboard Development</h5>
+              <p class="card-text mt-2">Designing interactive dashboards and reports that bring data stories to life.</p>
             </div>
           </div>
         </div>
@@ -853,10 +890,8 @@
           <div class="card animated-card h-100">
             <img src="images/services/3.png" class="card-img-top" alt="Predictive Modeling & Machine Learning">
             <div class="card-body d-flex flex-column text-center">
-              <h5 class="card-title">Predictive Modeling & Machine Learning</h5>
-              <p class="card-text mt-2">Leveraging Python and machine learning frameworks, I build custom predictive
-                models to forecast sales, predict customer churn, and identify key drivers of your business. Turn
-                historical data into a powerful tool for future planning.</p>
+              <h5 class="card-title">SQL Data Analysis</h5>
+              <p class="card-text mt-2">Writing and optimizing SQL queries for data extraction, validation, and insights.</p>
             </div>
           </div>
         </div>
@@ -865,10 +900,8 @@
           <div class="card animated-card h-100">
             <img src="images/services/4.png" class="card-img-top" alt="Data Strategy & Actionable Reporting">
             <div class="card-body d-flex flex-column text-center">
-              <h5 class="card-title">Data Strategy & Actionable Reporting</h5>
-              <p class="card-text mt-2">Data is useless without a story. I specialize in data storytelling, translating
-                complex findings into clear, compelling narratives and strategic recommendations for stakeholders,
-                ensuring insights lead to decisive action.</p>
+              <h5 class="card-title">Data Automation & Reporting</h5>
+              <p class="card-text mt-2">Automating recurring reports and validation processes to save time and ensure accuracy.</p>
             </div>
           </div>
         </div>
@@ -877,31 +910,6 @@
     </div>
   </section>
 
-  <section id="resume" class="resume-section section-darker">
-    <div class="container">
-      <h2 class="text-center">Experience</h2>
-      <div class="row">
-        <div class="col-md-8 offset-md-2">
-          <div class="resume-item animated-card">
-            <h4>Associate Software Enginner</h4>
-            <h5>2024 - Present</h5>
-            <p><em>Tata Consultancy Services, Bangalore, India</em></p>
-            <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and
-                production communication materials.</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of
-                the project.
-              </li>
-            </ul>
-          </div>
-
-        </div>
-      </div>
-      <div class="text-center mb-5">
-        <a href="path/to/your/resume.pdf" class="btn btn-primary btn-lg" download>Download CV</a>
-      </div>
-    </div>
-  </section>
 
   <section id="certifications" class="certifications-section section-dark">
     <div class="container">
@@ -917,7 +925,7 @@
               <p class="card-text">Completed an in-depth course covering NumPy, Pandas, and Scikit-learn to manipulate
                 data and build predictive models.</p>
               <div class="mt-auto text-center">
-                <a href="#" target="_blank" class="btn btn-secondary btn-sm">View Course</a>
+                <a href="https://www.udemy.com/course/python-for-data-science-and-machine-learning-bootcamp/?kw=python&src=sac&couponCode=DIWALI30" target="_blank" class="btn btn-secondary btn-sm">View Course</a>
               </div>
             </div>
           </div>
@@ -926,11 +934,10 @@
           <div class="card animated-card h-100">
             <img src="images/certifications/2.png" class="card-img-top" alt="Data Visualization Certification">
             <div class="card-body d-flex flex-column">
-              <h5 class="card-title text-center">Data Visualization with Power BI</h5>
-              <p class="card-text">Mastered Power BI for creating compelling, interactive dashboards and reports that
-                translate complex data into clear stories.</p>
+              <h5 class="card-title text-center">Complete Data Analyst Bootcamp</h5>
+              <p class="card-text">Master Data Analysis: Python, Stats, Gen AI, EDA, AWS, SQL ,Excel, Power BI, Tableau,ETL,Snowflake & Feature Engineering</p>
               <div class="mt-auto text-center">
-                <a href="#" target="_blank" class="btn btn-secondary btn-sm">View Course</a>
+                <a href="https://www.udemy.com/course/complete-data-analyst-bootcamp-from-basics-to-advanced/?kw=complete+data+analyst&src=sac&couponCode=DIWALI30" target="_blank" class="btn btn-secondary btn-sm">View Course</a>
               </div>
             </div>
           </div>
@@ -943,7 +950,7 @@
               <p class="card-text">Focused on advanced querying techniques, including window functions, CTEs, and
                 performance optimization for large datasets.</p>
               <div class="mt-auto text-center">
-                <a href="#" target="_blank" class="btn btn-secondary btn-sm">View Course</a>
+                <a href="https://www.udemy.com/course/the-complete-sql-bootcamp/" target="_blank" class="btn btn-secondary btn-sm">View Course</a>
               </div>
             </div>
           </div>
@@ -955,11 +962,10 @@
           <div class="card animated-card h-100">
             <img src="images/certifications/4.png" class="card-img-top" alt="Data Storytelling Certification">
             <div class="card-body d-flex flex-column">
-              <h5 class="card-title text-center">Data Storytelling & Reporting</h5>
-              <p class="card-text">Learned to structure analytical findings into a compelling narrative, ensuring insights
-                are understood and acted upon by stakeholders.</p>
+              <h5 class="card-title text-center">Statistics for Data Science</h5>
+              <p class="card-text">Statistics you need in the office: Descriptive & Inferential statistics, Hypothesis testing, Regression analysis</p>
               <div class="mt-auto text-center">
-                <a href="#" target="_blank" class="btn btn-secondary btn-sm">View Course</a>
+                <a href="https://www.udemy.com/course/statistics-for-data-science-and-business-analysis/?kw=stat&src=sac" target="_blank" class="btn btn-secondary btn-sm">View Course</a>
               </div>
             </div>
           </div>
@@ -968,11 +974,10 @@
           <div class="card animated-card h-100">
             <img src="images/certifications/5.png" class="card-img-top" alt="Machine Learning Course">
             <div class="card-body d-flex flex-column">
-              <h5 class="card-title text-center">Machine Learning Foundations</h5>
-              <p class="card-text">Explored core ML concepts including regression, classification, and clustering
-                algorithms using Python and Scikit-learn.</p>
+              <h5 class="card-title text-center"> Complete Data Science Bootcamp</h5>
+              <p class="card-text">Complete Data Science Training: Math, Statistics, Python, Advanced Statistics in Python, Machine and Deep Learning</p>
               <div class="mt-auto text-center">
-                <a href="#" target="_blank" class="btn btn-secondary btn-sm">View Course</a>
+                <a href="https://www.udemy.com/course/the-data-science-course-complete-data-science-bootcamp/" target="_blank" class="btn btn-secondary btn-sm">View Course</a>
               </div>
             </div>
           </div>
@@ -981,11 +986,11 @@
           <div class="card animated-card h-100">
             <img src="images/certifications/6.png" class="card-img-top" alt="Cloud Computing Course">
             <div class="card-body d-flex flex-column">
-              <h5 class="card-title text-center">AWS for Data Professionals</h5>
-              <p class="card-text">Gained foundational knowledge of cloud data services on AWS, including S3 for storage
-                and RDS for database management.</p>
+              <h5 class="card-title text-center">Microsoft Certified: Power BI Data Analyst Associate</h5>
+              <p class="card-text">Demonstrate methods and best practices that align with business and technical requirements for modeling, visualizing,
+              and analyzing data with Microsoft Power BI.</p>
               <div class="mt-auto text-center">
-                <a href="#" target="_blank" class="btn btn-secondary btn-sm">View Course</a>
+                <a href="https://learn.microsoft.com/en-us/credentials/certifications/data-analyst-associate/?practice-assessment-type=certification" target="_blank" class="btn btn-secondary btn-sm">View Course</a>
               </div>
             </div>
           </div>
